--- a/web/styles.css
+++ b/web/styles.css
@@ -47,13 +47,23 @@ pre {
 }
 
 
-button {
+.buttons {
   color: #282828;
   background-color: #ebdbb2;
   border-radius: 0px;
   padding: 5px 10px;
   cursor: pointer;
   margin: 0px 10px 0px 0px;
+  white-space: pre;
+}
+
+.button {
+  color: #282828;
+  background-color: #ebdbb2;
+  border-radius: 0px;
+  padding: 5px 10px;
+  cursor: pointer;
+  margin: 0px;
   white-space: pre;
 }
 
